gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  selector:
    app: gitlab
  ports:
  - port: 30001
    name: registry
    nodePort: 30001
  - port: 90
    name: main
type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
  labels:
    app: gitlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          #image: gitlab/gitlab-ce:latest
          image: gitlab/gitlab-ce:12.2.4-ce.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 90
            - containerPort: 443
            - containerPort: 22
            - containerPort: 30001
          resources:
            requests:
              cpu: "500m" 
              memory: "1024Mi" 
#            limits:
#              cpu: "4000m" 
#              memory: "2048Mi" 
          volumeMounts:
            #### manual nfs setting
            - name: config
              mountPath: /etc/gitlab #exact directory
            - name: logs
              mountPath: /var/log/gitlab #exact directory
            - name: data
              mountPath: /var/opt/gitlab #exact directory
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: gitlab-config
        - name: logs
          persistentVolumeClaim:
            claimName: gitlab-logs
        - name: data
          persistentVolumeClaim:
            claimName: gitlab-data
